style.css
/* ... */
/*"more unreads" bottom*/
.p-channel_sidebar__banner--top {
	background-color: var(--background);
	border: 1px solid var(--border-bright);
	border-top: none;
	border-radius: 0 0 15px 15px;
}

/*"more unreads" bottom */
.p-channel_sidebar__banner--bottom {
	background-color: var(--background);
	border: 1px solid var(--border-bright);
	border-bottom: none;
	border-radius: 15px 15px 0 0;
}

/*"unread mentions"*/
.p-channel_sidebar__badge,
.p-channel_sidebar__banner--mentions {
	/*inverted because important*/
	background-color: var(--color-highlight) !important;
	border-color: var(--text-bright);
	color: var(--text-bright);
	border: 0;
	border-radius: 0;
}

/*also add border to unread count for individual channels*/

.p-channel_sidebar__badge {
// border: 1 px solid;
}

/* new scrollbar */
.p-channel_sidebar div.c-custom_scrollbar__thumb_vertical, .p-channel_sidebar div.c-scrollbar__bar, .c-scrollbar__bar {
	background: var(--scrollbar-background);
	border: 0;
}

#channels_scroller.show_which_channel_is_active[class] li.active .presence.active i.presence_icon,
#channels_scroller.show_which_channel_is_active[class] li.active .slackbot_icon,
#channels_scroller.show_which_channel_is_active[class] li.active .presence.away i.presence_icon {
	color: inherit !important;
}

#client_body::before, #client_body:not(.onboarding):before {
	border-bottom: 1px solid var(--border-dim) !important;
	background: var(--background) !important;
	box-shadow: none !important;
}

#client_body, #messages_container.has_top_messages_banner:before {
	background: var(--background) !important;
}

ts-message, .channel_title .channel_name, ts-jumper input[type="text"],
ts-jumper ol li .member_real_name, ts-jumper ol li .view_name, ts-jumper ol li .channel_name {
	color: var(--text) !important;
}

.light_theme ts-message .message_content a.message_sender, #msg_input::-webkit-input-placeholder,
ts-jumper input[type="text"]::-webkit-input-placeholder {
	color: var(--text) !important;
}

.p-channel_sidebar__channel--im .c-presence--active, .p-channel_sidebar__channel--im-slackbot:before,
#presence.active:before {
	color: var(--active-icon) !important;
}

#msg_input, #primary_file_button {
	background: transparent !important;
}

#msg_input, #primary_file_button {
	background: transparent !important;
	color: var(--text) !important;
	border-color: var(--border-dim) !important;
}

.day_divider .day_divider_label,
#convo_container .convo_flexpane_divider .reply_count {
	color: var(--text) !important;
	background-color: var(--background) !important;
	border: 1px solid var(--border-bright) !important;
	border-radius: 1rem;
}

.mention_day_container_div .day_divider .day_divider_label {
	border: 1px solid var(--border-dim) !important;
}

#convo_container .convo_flexpane_divider .reply_count {
	border-radius: 10px;
	padding: 0px 10px;
}

.mention_day_container_div .day_divider:before {
	background-color: transparent !important;
	border-color: var(--border-dim);
}

.day_container .day_msgs {
	border-top: 1px solid var(--border-bright) !important;
	padding-right: 10px;
	padding-left: 2px;
}

textarea, input[type="text"], #file_comment_textarea {
	background-color: var(--background-elevated) !important;
	border-color: var(--border-dim) !important;
	color: var(--text) !important;
}

textarea:focus, input[type="text"]:focus, #file_comment_textarea {
	border-color: var(--border-bright) !important;
	color: var(--text-bright) !important;
}

ts-message {
	border-radius: 5px;
	margin: 1px 5px !important;
	box-shadow: none !important;
}

ts-message:hover {
	background: var(--background-hover) !important;
}

#messages_container::after {
	background: none !important;
}

.bot_label {
	padding: 0 4px !important;
	border-radius: 3px !important;
	background: var(--background) !important;
	border: 1px solid var(--border-bright);
}

.file_container:after {
	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0, #333 100%) !important;
}

.rxn,
#col_channels,
#col_channels_footer,
pre,
ts-message .action_hover_container .btn_msg_action,
.file_container,
.file_container .CodeMirror .CodeMirror-code > div:before, .file_container .CodeMirror .sssh-line:before, .file_container .sssh-code .CodeMirror-code > div:before, .file_container .sssh-code .sssh-line:before,
#col_flex,
.search_message_result,
.search_result_with_extract,
#search_filters a,
.menu,
.menu #menu_items_scroller,
.btn, .btn_outline {
	background: var(--background-elevated) !important;
}

#col_channels {
	border-right: 1px solid var(--border-dim);
}

#flex_contents .heading,
#flex_contents .heading a,
#flex_contents .heading_text,
#flex_contents .subheading,
#flex_contents .toolbar_container {
	background: var(--background) !important;
	color: var(--text) !important;
	border-color: var(--border-dim);
}

pre,
ts-message .action_hover_container .btn_msg_action,
.file_container .CodeMirror .CodeMirror-code > div pre, .file_container .CodeMirror .sssh-line pre, .file_container .sssh-code .CodeMirror-code > div pre, .file_container .sssh-code .sssh-line pre,
.search_message_result .search_message_result_meta a,
.search_message_result .search_message_result_meta .date_links a,
.flexpane_redesign #flex_contents .heading_text,
#flex_contents .subheading,
#search_filters.files #filter_files, #search_filters.messages #filter_messages,
.menu ul li a,
.btn, .btn_outline, .menu {
	color: var(--text) !important;
	border-color: var(--border-dim) !important;
}

.btn:hover:after {
	border-color: var(--border-bright);
}

.action_hover_container {
	border: 1px solid var(--border-dim) !important;
}

.ts_tip_float.btn_msg_action:not(:last-child) {
	border-right: 1px solid var(--border-dim) !important;
}

.ts_tip_float.btn_msg_action:hover {
	background-color: var(--background) !important;
}

#quick_switcher_btn {
	/*border-top-color: #333 !important;*/
	background-color: transparent;

}
/* ... */

